--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html class="ie" lang="en">
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" media="all" href="https://valesh22.github.io/repo-diploma2/css/style.css">
+<meta name="description" content="...">
+</head>
+<body>
 <div class="page">
 <header class="header">
       <div class="header-container">
@@ -33,3 +42,5 @@
         </main>
       </div>
   </div>
+</body>
+</html>
