--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" media="all" href="https://valesh22.github.io/repo-diploma2/css/style.css">
+<link rel="stylesheet" media="all" href="https://github.com/ValeSh22/repo-diploma2/css/style.css">
 <meta name="description" content="...">
 </head>
 <body>
