--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="https://github.com/ValeSh22/repo-diploma2/css/style.css">
+<link rel="stylesheet" href="style.css">
 <meta name="description" content="...">
 </head>
 <body>
@@ -37,7 +37,7 @@
     <main class="main">
       <article class="athlets">
             <h2 class="athlets-title">Athlets</h2>
-        <img src="/img/footballer_497.png" alt="football gamer" class="athlets-img">
+        <img src="footballer_497.png" alt="football gamer" class="athlets-img">
         </article>
         </main>
       </div>
