--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Diplom-2</title>
+        <title>Surface</title>
         <meta name="description" content="Diplom">
         <link rel="stylesheet" href="css/main.css">
     </head>
